--- a/src/main/twirl/report/index.scala.html
+++ b/src/main/twirl/report/index.scala.html
@@ -17,7 +17,8 @@
 @import uk.gov.hmrc.zap.api.ZapAlert
 @import uk.gov.hmrc.zap.api.ScanStatus
 
-@(alerts: List[ZapAlert], failureThreshold: String, spiderScanStatus: ScanStatus, activeScanStatus: ScanStatus)
+@import uk.gov.hmrc.zap.api.Scanner
+@(alerts: List[ZapAlert], failureThreshold: String, spiderScanStatus: ScanStatus, activeScanStatus: ScanStatus, missingScanners: Option[List[Scanner]])
 
 <html>
     <head>
@@ -109,6 +110,23 @@
             </tr>
         </table>
         <div class="spacer-lg"></div>
+        @(missingScanners match {
+            case Some(scanners) => {
+                <h1>Scanners not configured</h1>
+
+                <table width="45%" class="missingScanners">
+                @{for (scanner <- scanners)
+                    <tr id="9999" bgcolor="#666666">
+                        <th width="25%" height="24">id</th>
+                        <th width="50%" align="center">name</th>
+                        <th width="25%" align="center">type</th>
+                    </tr>
+                }
+                </table>
+
+            }
+            case None => ()
+        })
         <h3>Summary of Scan</h3>
         <table width="45%" class="summary">
             <tr bgcolor="#666666">
